--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@ button:active {
 Thanks for using [NitroGen](http://sitesgithub.github.io/nitro/index.html)
   
 ―――――――――――――――――――――――――――――――――――――――
-[INFO] Discord Code Generator
-[INFO] Discord Codes will be here.
-[INFO] MOST CODES DO NOT WORK!
-―――――――――――――――――――――――――――――――――――――――
+[INFO] Discord Nitro Üretici
+[INFO] Discord Nitroları Burda Olucaktır
+[INFO] Kodların %95'i Çalışmayabilir
+―――――――――――――――――――――――――――――――――――
 
 </textarea>
 <p></p>
